# cinematacms

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  install-nodejs.sh  install.sh  pyproject.toml  requirements.txt  restart_script.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependabot-check.yml  deploy-dev.yml
actions/: models.py
actions/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_mediaaction_remote_ip.py
cms/: celery.py  ci_settings.py  context_processors.py  custom_pagination.py  dev_settings.py  health.py  local_settings_example.py  middleware.py  observability.py  observability_middleware.py  permissions.py  request_utils.py  settings.py  settings_utils.py  storage.py  tests.py  ui_variant.py  urls.py  wsgi.py
cms/tests/: test_health.py  test_observability.py  test_robots.py  test_whisper.py
deploy/: celery_beat.service  celery_long.service  celery_short.service  celery_whisper.service  grafana-encoding-queue-wait.json  mediacms.io  mediacms.service  nginx.conf  uwsgi.ini
docs/: index.md  modern-semantic-tokens.md  modern-track-color-system.md
docs/admin-guides/: cinematacms-roles-permission-matrix.md  content_moderation_workflow.md  languages.md  permission_system.md  troubleshooting_guide.md  user_management.md  video-sprite-backfill.md
docs/brainstorms/: 2026-02-23-tailwind-legacy-full-parity-brainstorm.md  2026-04-19-ui-variant-gate-requirements.md
docs/contributing/: CONTRIBUTING.md
docs/customization/: Customise-social-media-links.md  FRONTEND_WORKFLOW.md  adding-sidebar-pages.md  frontend-development.md  sidebar-content-about-editorial-contact.md  site-branding.md
docs/features/: Featured-Video-Scheduling-Documentation.md  Media_Viewing_Experience_and_Controls.md  automatic_transcription.md  feature_flags.md  tinymce.md
docs/plans/: 2026-02-19-feat-frontend-modernization-m2-vite-migration-plan.md  2026-02-19-feat-frontend-modernization-m3-modern-track-plan.md  2026-02-19-feat-frontend-modernization-react19-vite-modern-track-plan.md  2026-02-23-feat-tailwind-legacy-css-full-parity-plan.md  2026-04-19-001-feat-ui-variant-gate-plan.md  2026-05-11-001-feat-modern-home-page-plan.md
docs/reviews/: pr-503-review.md
docs/security/: Implementing_CSP.md  Implenting_CSP.md  Rate-limiting-with-django-axes.md  hsts-security.md  mfa_authentication.md  secure-file-serving.md  whitepaper-harden-password-restricted-video.md
docs/setup/: Developer-Onboarding.md  Post-installation-guide.md  (+4 more)
files/: admin.py  apps.py  backends.py  cache_utils.py  community_impact_validators.py  context_processors.py  draft_utils.py  feeds.py  forms.py  helpers.py  lists.py  management_views.py  methods.py  metrics.py  models.py  password_utils.py  permissions.py  query_cache.py  secure_media_views.py  serializers.py  sprites.py  stop_words.py  storage_usage.py  tasks.py  tinymce_handlers.py  token_utils.py  urls.py  views.py
fixtures/: categories.json  content_sensitivities.json  encoding_profiles.json
frontend/: .editorconfig  .env.example  .prettierignore  .prettierrc  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-workspace.yaml  vite.config.js  vitest.config.js
notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
scripts/: build_frontend.sh
templates/: 404.html  503.html  base.html  base_modern.html  messages.html  root.html
tests/: test_index_page_featured.py  test_profile_revamp.py  test_ui_variant.py
todos/: 001-complete-p1-videojs-double-loading.md  002-complete-p2-missing-sri-cdn-scripts.md  003-complete-p2-media-password-exposed.md  004-complete-p2-cors-wildcard-origin.md  005-complete-p2-clickjacking-x-frame-options.md  006-pending-p2-no-csp-configured.md  007-complete-p2-remove-manual-chunks.md  008-complete-p2-remove-dead-demo-entry.md  009-complete-p3-vite-config-cleanup.md  010-complete-p3-safedispatch-overengineered.md  011-complete-p3-hmr-tags-unconditional.md  012-pending-p3-hardcoded-credentials.md  013-complete-p3-extra-css-versioning.md  014-pending-p3-videojs-markers-umd.md
uploader/: fineuploader.py  tests.py  urls.py  views.py
users/: adapter.py  admin.py  forms.py  middleware.py  models.py  password_validators.py  serializers.py  tests.py  urls.py  validators.py  views.py
utils/: security.py
(+1244 files in other folders)
